 Version     Date
 1.18.1      ??/09/08 
                Fix: Dreambox setup, password now not mandatory.
                Fix: xTV skin wasnt showing pad buttons.
                Change: Pad buttons (A,B,X,Y etc) graphics much improved (thanks smuto).
                Change: Some skin tweaks.
                New: mediaStream skin (thanks smuto).
                New: Polish translation (thanks smuto).
 1.18        19/08/08
                Fix/Change/Updated: All datasources and SaveProgramme modules.
                Change: datasource us_Zap2it amended to use us_SchedulesDirect (now a paid for service - you need to sign up ~ $20 - sorry!)
                Fix/Updated: IMDb scraping.
                Fix/Updated: LiveSportOnTV scraping.
                Fix/Updated: TVRage.com scraping.
                Change: Cache and settings now located in UserData\script_data\myTV
                Change: Removed dependancy on 3rd party ClientCookie lib, now uses python 2.4's urllib2 cookie lib
                Change: Readme/Changelog can be displayed from Settings Menu.
                Change: Language translation of readme.txt (if supplied).
                Change: datasource be_Telenet removed (broken due to too many site changes)
                Change: Main & Settings Menu more context sensitive.
                Change: Faster channel data analysis, storage.
                Change: Faster epg display.
                Change: Configuring of DataSources and SaveProgrammes overhauled.
                Change: Removed TV.com lookup until script is brought upto be myTV v1.18 compatible
                Change: Other stuff I can't remember, but quite a lot!
                New: Language support (translations wanted!)
                New: Skinning support (pleaase contribute!)
                New: Self update from xbmc google svn repository supported (see Settings Menu).
                New: SageTV DataSource and SaveProgramme.