@@ -29,14 +29,17 @@ import gc
 __scriptname__ = "myTV"
 __version__ = '1.18.1'
 __author__ = 'BigBellyBilly [BigBellyBilly@gmail.com]'
-__date__ = '09-09-2008'
+__date__ = '12-09-2008'
 xbmc.output(__scriptname__ + " Version: " + __version__ + " Date: " + __date__)
 
 # Shared resources
-DIR_HOME = os.getcwd().replace( ";", "" )
+if os.name=='posix':    
+    DIR_HOME = os.path.abspath(os.curdir).replace(';','')		# Linux case
+else:
+	DIR_HOME = os.getcwd().replace( ";", "" )
 DIR_RESOURCES = os.path.join( DIR_HOME , "resources" )
 DIR_RESOURCES_LIB = os.path.join( DIR_RESOURCES , "lib" )
-DIR_USERDATA = os.path.join( "T:\\script_data", __scriptname__ )
+DIR_USERDATA = os.path.join( "T:"+os.sep, "script_data", __scriptname__ )
 DIR_GFX = os.path.join(DIR_RESOURCES,'gfx')
 sys.path.insert(0, DIR_RESOURCES_LIB)
 
@@ -2633,7 +2636,7 @@ def callTVCom():
 
 	# import module
 	try:
-		pathHome = "Q:\\Scripts\\tv.com\\"
+		pathHome = os.path.join("Q:", "Scripts", "tv.com")
 		pathSystem = os.path.join(pathHome, "System")
 		moduleName = "default"
 		pathFull = os.path.join( pathHome, moduleName + ".py" )
@@ -2827,8 +2830,8 @@ class ProgrammeSaveTemplate:
 		return None
 
 	def parseTemplate(self, template):
-		matches = re.findall('\\'+self.PREFIX + '(.)', template)
-		return matches
+		regex = "\\%s(.)" % self.PREFIX
+		return findAllRegEx(template, regex)
 
 	def format(self, channelInfo, prog, template):
 		debug("> format()")
